kubernetes/apps/kube-system/longhorn/app/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: longhorn
  annotations:
    cert-manager.io/cluster-issuer: cloudflare
    cert-manager.io/private-key-rotation-policy: Always
spec:
  ingressClassName: internal
  rules:
    - host: longhorn.${BASE_DOMAIN}
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: longhorn-frontend
                port:
                  number: 80
  tls:
    - hosts:
        - longhorn.${BASE_DOMAIN}
      secretName: longhorn-tls-0
